# Object_Recognition

./: CMakeLists.txt  FINAL_SETUP.md  FIXES_APPLIED.md  GITHUB_SETUP.md  HIGH_QUALITY_GUIDE.md  QUICK_START.md  README.md  REALTIME_PHONE_DETECTION.md  ROS2_USAGE_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  VIDEO_PLAYBACK_GUIDE.md  VIDEO_RECORDING_GUIDE.md  activate_env.sh  download_models.sh  fix_environment.sh  install_cuda_13.sh  install_cuda_dependencies.sh  jetson_setup_guide.md  launch_detection.sh  live_object_detection.py  live_object_detection_jetson.py  push_to_github.sh  requirements.txt  run_cpu_system.sh  run_cpu_test.sh  setup.sh  test_camera.py  test_cpu_only.py  test_simple.py  test_system.py  view_detection_feed.py  view_detections.py
config/: mobilenet_config.yaml  pipeline_config.yaml  yolo_config.yaml
docs/: README_ROS2_WORKSPACE.md  how_to_rebuild_ros2_ws_folder.md  ros2_testing_guide.md  run.md
drone_object_recognition/: __init__.py
gpuSetup/: build_pytorch_sm120.sh  build_pytorch_with_cuda.sh
launch/: high_quality_recording.launch.py  object_recognition.launch.py  object_recognition_cpu.launch.py  realtime_phone_detection.launch.py  test_with_usb_camera.launch.py  test_with_usb_camera_cpu.launch.py  test_yolo_detection.launch.py  yolo_only.launch.py
scripts/: analyze_results.py  camera_recorder.py  mobilenet_classifier.py  mobilenet_classifier_wrapper.py  mock_mavros_services.py  object_recognition_pipeline.py  object_recognition_pipeline_wrapper.py  phone_detection_monitor.py  play_recording.py  simple_ros2_test.py  test_ros2_yolo.py  (+5 more)
(+39 files in other folders)
